--- a/roles/k3s-master/tasks/main.yaml
+++ b/roles/k3s-master/tasks/main.yaml
@@ -6,7 +6,7 @@
   when: "'k3s' in services"
 
 - name: Install k3s on master node
-  shell: "curl -sfL https://get.k3s.io | INSTALL_K3S_VERSION={{ k3s_version }} INSTALL_K3S_EXEC=\"server --docker --tls-san k3s-master --no-deploy servicelb --no-deploy traefik --flannel-backend=host-gw \" sh -"  
+  shell: "curl -sfL https://get.k3s.io | INSTALL_K3S_VERSION={{ k3s_version }} INSTALL_K3S_EXEC=\"server --docker --tls-san k3s-master --no-deploy servicelb --no-deploy traefik --flannel-backend=host-gw --kube-apiserver-arg=tls-min-version=VersionTLS12 \" sh -"  
 # INSTALL_K3S_VERSION={{ k3s_version }} K3S_KUBECONFIG_MODE=\"644\" INSTALL_K3S_EXEC=\" server --no-deploy servicelb --no-deploy traefik --flannel-backend host-gw  \" sh -"  
 
 # INSTALL_K3S_VERSION
